@@ -344,8 +344,6 @@ functions return safe values or a failure condition.
 [=#tweaks]
 == Tweaks ==
 
-Oracle (and possibly other db's) have a date type that is actually a date/time type but whether you get time information back or not depends on how you fetch the column.  By default, Oracle dates are mapped to the MYSQL_TYPE_DATETIME type.  However, if you want the type to be returned as MYSQL_TYPE_DATE instead, then set the environment variable SQLR_MYSQL_MAP_DATETME_TO_DATE="yes".
-
 When fetching a date into a MYSQL_TIME struct, the drop-in library attempts to interpret whatever it got back from the database as a date.  It can parse the native formats of all the databases that SQL Relay currently supports, but it cannot tell by examination whether a date like 02-05-2011 is in MM-DD-YYYY format or DD-MM-YYYY format.  By default, it assumes MMDD, but if you want it to assume DDMM instead, set the environment variable SQLR_MYSQL_DATE_DDMM="yes".  Another environment variable allows you to specify different behaviors for dates that start with years, such as 2011-02-05.  If SQLR_MYSQL_DATE_YYYYDDMM="yes" then that date would be interpreted as being in the YYYY-DD-MM format.  If it is set to "no" then that date would be interpreted as being in the YYYY-MM-DD format.  If it is not set, then it defaults to whatever SQLR_MYSQL_DATE_DDMM is set to.  If neither are set then dates are universally interpreted to be in MM/DD format.  There are very specific cases where these two environment variables need to be set differently from one another.  You'll know if you need to.
 
 When using mysql_stmt_bind_result, it's possible to bind fewer buffers than there are columns in the result set.  For example you might run "select col1, col2, col3 from mytable" but only bind a single value, expecting col1 to be fetched and the others ignored.  The native !MySQL library doesn't support this but some apps do it anyway and it's just fortune that they don't crash.  Some apps try a little harder and "NULL-terminate" the bind array with a zeroed-out bind buffer.  This doesn't appear to have any effect with the native !MySQL library but with the drop-in replacement library if you set the environment variable SQLR_MYSQL_NULL_TERMINATED_RESULT_BINDS="yes" then mysql_stmt_fetch() and mysql_fetch() will stop populating bind buffers when they find one containing NULL's for the buffer, length and is_null pointers.
